manifests/qbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
  - name: http
    port: 80
    targetPort: 8080
