manifests/qbit/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qbittorrent-redirect-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrent.smeyer.ca`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 80
  tls:
    secretName: wildcard-smeyer-ca-tls 
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`torrent.smeyer.ca`)
      kind: Rule
      middlewares:
        - name: qbittorrent-redirect-https
      services:
        - name: qbittorrent
          port: 80
